docs: add docs of getMenu method